creusot/tests/should_fail/prusti/adt/same_pair.stderr
error: function was supposed to return data with type `SamePair<&'a mut u32>` but it is returning data with type `SamePair<&{'a|'b} mut u32>`
       expected `'a` found `{'a|'b}`
 --> same_pair.rs:9:5
  |
9 |     SamePair(x, y)
  |     ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

